Menu lateral con cuadrados en vez de palabras

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" type="text/css" href="css/slider.css"/>
 	<link rel="stylesheet" type="text/css" href="css/counters.css"/>
 	<link rel="stylesheet" type="text/css" href="css/social.css"/>
+	<!-- Added CSS -->
+	<link rel="stylesheet" type="text/css" href="css/sidebar.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animations.css"/>
 
 	<!--Fonts-->
@@ -40,6 +42,7 @@
 			}
 		}
 
+		/* Circulos servicios */
 		.ht-service-icon .img {
 			border-radius: 50%;
 			cursor: pointer;
@@ -64,63 +67,6 @@
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
 			box-shadow: inset 0 0 0 110px rgba(0, 0, 0, 0.6), inset 0 0 0 5px rgba(255, 255, 255, 0.8), 0 1px 2px rgba(0, 0, 0, 0.1);
-		}
-
-		/* Sidebar */
-		#sidebar {
-			position: fixed;
-			left: 0px;
-			top: 30%;
-		    float:left;
-		}
-
-		#content {
-		    float:right;
-		    padding-left:24px;
-		}
-
-
-			/* navigation */
-		nav {
-		    background-color:rgb(240,240,240);
-		    border:solid 1px rgb(220,220,220);
-		    padding:0 12px;
-		}
-
-		nav.stick {
-		    position: fixed;
-		    top: 0;
-		    z-index: 10000;
-		    margin-top:12px;
-		}
-
-
-		nav ul {
-		    list-style-type:none;
-		    margin:0;
-		    padding:0;
-		}
-
-		nav li {
-
-		}
-
-		nav li a {
-		    color:rgb(50,50,50);
-		    font-weight:700;
-		}
-
-		a.nav-active {
-		    color:#ccc;
-		}
-
-
-
-		hr {
-		    border:none;
-		    background-color:rgb(220,220,220);
-		    height:12px;
-		    margin-bottom:18px;
 		}
 
 	</style>
@@ -603,12 +549,12 @@
 			<div id="nav-anchor"></div>
 			<nav>
 				<ul>
-					<li><a href="section-1" data-scroll-to="#section-1" data-scroll-to-offset="-60">sect1</a></li>
-					<li><a href="section-2" data-scroll-to="#section-2" data-scroll-to-offset="-60">sect2</a></li>
-					<li><a href="section-3" data-scroll-to="#section-3" data-scroll-to-offset="-60">sect3</a></li>
-					<li><a href="section-4" data-scroll-to="#section-4" data-scroll-to-offset="-60">sect4</a></li>
-					<li><a href="section-5" data-scroll-to="#section-5" data-scroll-to-offset="-60">sect5</a></li>
-					<li><a href="section-6" data-scroll-to="#section-6" data-scroll-to-offset="-60">sect6</a></li>
+					<li><a href="section-1" data-scroll-to="#section-1" data-scroll-to-offset="-60"><div></div></a></li>
+					<li><a href="section-2" data-scroll-to="#section-2" data-scroll-to-offset="-60"><div></div></a></li>
+					<li><a href="section-3" data-scroll-to="#section-3" data-scroll-to-offset="-60"><div></div></a></li>
+					<li><a href="section-4" data-scroll-to="#section-4" data-scroll-to-offset="-60"><div></div></a></li>
+					<li><a href="section-5" data-scroll-to="#section-5" data-scroll-to-offset="-60"><div></div></a></li>
+					<li><a href="section-6" data-scroll-to="#section-6" data-scroll-to-offset="-60"><div></div></a></li>
 				</ul>
 			</nav>
 		</div>
