Se nadio la textura de Laura a las paginas se llama textura01

--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -399,7 +399,7 @@
 
 			<!-- - - - - - - - - - SECTION - - - - - - - - - Have a project with us-->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
 					<p class="lead-30">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
