--- a/heliconia/faq.html
+++ b/heliconia/faq.html
@@ -162,7 +162,7 @@
 		<div id="page">
 			<!-- Title bar -->
 			<div class="pi-section-w pi-section-base pi-section-base-gradient">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section" style="padding: 30px 40px 26px;">
 					<div class="pi-row">
 						<div class="pi-col-sm-4 pi-center-text-xs">
@@ -409,7 +409,7 @@
 
 			<!-- - - - - - - - - - SECTION CONTACT US - - - - - - - - - -->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-grey">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
 					<p class="lead-30 pi-text-dark">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
