--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -215,7 +215,7 @@
 
 			<!-- - - - - - - - - - SECTION SLOGAN HIGH TECH- - - - - - - - - -->
 			<div id="section-2" class="pi-section-w pi-shadow-inside-top pi-section-dark">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-50 pi-padding-bottom-30">
 					<!-- Row -->
 					<div class="pi-row">
@@ -360,7 +360,7 @@
 
 			<!-- - - - - - - - - - SECTION BASE (HOW WE WORK) - - - - - - - - - -->
 			<div id="section-5" class="pi-section-w pi-section-base pi-section-base-gradient">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section">
 					<div class="pi-text-center">
 						<h3 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-border pi-has-tall-border pi-has-short-border">
@@ -463,7 +463,7 @@
 
 			<!-- - - - - - - - - - SECTION CONTACT US - - - - - - - - - -->
 			<div id="section-7" class="pi-section-w pi-shadow-inside-top pi-section-grey">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
 					<p class="lead-30 pi-text-dark">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
