--- a/heliconia/services.html
+++ b/heliconia/services.html
@@ -473,7 +473,7 @@
 
 			<!-- - - - - - - - - - SECTION phrase divider- - - - - - - - - -->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-dark">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-50 pi-padding-bottom-30">
 					<!-- Row -->
 					<div class="pi-row">
@@ -495,7 +495,7 @@
 
 			<!-- - - - - - - - - - SECTION servicio 2- - - - - - - - - -->
 			<div class="pi-section-w pi-section-grey pi-border-top">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
 						<h6 class="pi-uppercase pi-text-base pi-letter-spacing-3  pi-margin-bottom-15">
@@ -736,7 +736,7 @@
 
 			<!-- - - - - - - - - - SECTION phrase divider- - - - - - - - - -->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-50 pi-padding-bottom-30">
 					<!-- Row -->
 					<div class="pi-row">
@@ -758,7 +758,7 @@
 
 			<!-- - - - - - - - - - SECTION servicio 3- - - - - - - - - -->
 			<div class="pi-section-w pi-section-white pi-border-top">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
 						<h6 class="pi-uppercase pi-letter-spacing-3 pi-text-base pi-margin-bottom-15">
@@ -990,7 +990,7 @@
 
 			<!-- - - - - - - - - - SECTION phrase divider- - - - - - - - - -->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-dark">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-50 pi-padding-bottom-30">
 					<!-- Row -->
 					<div class="pi-row">
@@ -1243,7 +1243,7 @@
 
 			<!-- - - - - - - - - - SECTION - - - - - - - - - Have a project with us-->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
 					<p class="lead-30">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
