--- a/heliconia/services.html
+++ b/heliconia/services.html
@@ -16,7 +16,7 @@
 	<!-- Added css-->
 	<link rel="stylesheet" type="text/css" href="css/accordion.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animations.css"/>
-
+	<link rel="stylesheet" type="text/css" href="css/sidebar.css"/>
 	<!--Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
 
@@ -26,13 +26,16 @@
 
 <body>
 	<style>
+		/* Footer */
 		#location_map {
 			background-image: url('img/colombia-locator.png'); 
 			background-position: 80% -6px; 
 			background-repeat: no-repeat;
 		}
+		#sidebar {
+			top: 11%;
+		}
 
-		/* Portrait */
 		@media only screen and (max-device-width: 480px) and (orientation: portrait) {
 			#location_map {
 				background-image: url('img/colombia-locator.png'); 
@@ -40,6 +43,12 @@
 				background-repeat: no-repeat;
 			}
 		}
+		@media screen and (max-width:991px){
+			#footer{
+				padding-bottom: 65px;
+			}
+		}
+		/* End CSS footer*/
 
 		/* Iconos subservicios - Hover 6 circulos*/
 		.ht-service-icon .img6 {
@@ -232,7 +241,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION servicio 1- - - - - - - - - -->
-			<div class="pi-section-w pi-section-white pi-border-top">
+			<div id="section-1" class="pi-section-w pi-section-white pi-border-top">
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
 						<h6 class="pi-uppercase pi-letter-spacing-3 pi-text-base pi-margin-bottom-15">
@@ -494,7 +503,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION servicio 2- - - - - - - - - -->
-			<div class="pi-section-w pi-section-grey pi-border-top">
+			<div id="section-2" class="pi-section-w pi-section-grey pi-border-top">
 				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
@@ -757,7 +766,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION servicio 3- - - - - - - - - -->
-			<div class="pi-section-w pi-section-white pi-border-top">
+			<div id="section-3" class="pi-section-w pi-section-white pi-border-top">
 				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
@@ -1011,7 +1020,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION servicio 4- - - - - - - - - -->
-			<div class="pi-section-w pi-section-grey pi-border-top">
+			<div id="section-4" class="pi-section-w pi-section-grey pi-border-top">
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
 						<h6 class="pi-uppercase pi-letter-spacing-3 pi-text-base pi-margin-bottom-15">
@@ -1256,7 +1265,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- Footer -->
-			<div class="pi-section-w pi-border-bottom pi-border-top-light pi-section-dark">
+			<div id="footer" class="pi-section-w pi-border-bottom pi-border-top-light pi-section-dark" style="background-image: url('img/textura_pie.png');background-repeat: no-repeat;background-position: left bottom;  background-size: 769px 331px;">
 				<div class="pi-section pi-padding-bottom-10">
 					<!-- Row -->
 					<div class="pi-row">
@@ -1323,6 +1332,20 @@
 		<!-- Scroll top -->
 		<div class="pi-scroll-top-arrow" data-scroll-to="0"></div>
 		<!-- End scroll top -->
+
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div id="nav-anchor"></div>
+			<nav>
+				<ul>
+					<li><a href="section-1" data-scroll-to="#section-1" data-scroll-to-offset="-70"><div></div></a></li>
+					<li><a href="section-2" data-scroll-to="#section-2" data-scroll-to-offset="-70"><div></div></a></li>
+					<li><a href="section-3" data-scroll-to="#section-3" data-scroll-to-offset="-70"><div></div></a></li>
+					<li><a href="section-4" data-scroll-to="#section-4" data-scroll-to-offset="-70"><div></div></a></li>
+				</ul>
+			</nav>
+		</div>
+		<!-- End Sidebar -->
 	</div>
 
 	<script src="3dParty/jquery-1.11.0.min.js"></script>
@@ -1342,7 +1365,7 @@
 	<!-- Added scripts-->
 	<script src="scripts/pi.accordion.js"></script>
 	<script src="scripts/pi.init.animations.js"></script>
-	
+	<script src="3dParty/sidebar.js"></script>
 	<script type="text/javascript">
 
 	$(document).ready(function() {    
