--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -89,7 +89,7 @@
 						<!-- Logo -->
 						<div class="pi-row-block pi-row-block-logo">
 							<a href="index.html">
-								<img src="img/logo-base.png" alt="">
+								<img src="img/logo-base.png" style="padding: 11px 0;" alt="">
 							</a>
 						</div>
 						<!-- End logo -->
@@ -238,85 +238,90 @@
 					</div>
 					<!-- End row -->
 					<div class="pi-row">
-						<div class="pi-col-xs-6 pi-col-sm-3 pi-padding-bottom-40 pi-text-center">
-							<!-- Team member -->
+						<!-- Team member -->
+						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center">
 								<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px;">
 									<img src="img_external/team/leader-11.jpg" alt="">
 								</div>
-								<h3 class="h4 pi-margin-bottom-5">Mike Ross</h3>	
+								<h3 class="h4 pi-margin-bottom-5">David Suarez</h3>	
 								<p class="pi-italic pi-text-base pi-margin-bottom-10">
-									Co-Founder, Art Director
-								</p>
-								<p class="pi-margin-bottom-10">
-									Leveraging our collective experience, we create extraordinary elegant solutions
+									Co-fundador, Director Ejecutivo
 								</p>
 								<ul class="pi-social-icons-simple pi-small pi-colored clearFix">
 									<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
 									<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
 									<li><a href="#" class="pi-social-icon-dribbble"><i class="icon-dribbble"></i></a></li>
 								</ul>
-							<!-- End team member -->
 						</div>
-						<div class="pi-col-xs-6 pi-col-sm-3 pi-padding-bottom-40 pi-text-center">
-							<!-- Team member -->
+						<!-- End team member -->
+						<!-- Team member -->
+						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center">
 								<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px;">
 									<img src="img_external/team/leader-11.jpg" alt="">
 								</div>
-								<h3 class="h4 pi-margin-bottom-5">Mike Ross</h3>	
+								<h3 class="h4 pi-margin-bottom-5">Daniel Martinez</h3>	
 								<p class="pi-italic pi-text-base pi-margin-bottom-10">
-									Co-Founder, Art Director
-								</p>
-								<p class="pi-margin-bottom-10">
-									Leveraging our collective experience, we create extraordinary elegant solutions
+									Co-Fundador, Ingeniero Lider
 								</p>
 								<ul class="pi-social-icons-simple pi-small pi-colored clearFix">
 									<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
 									<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
 									<li><a href="#" class="pi-social-icon-dribbble"><i class="icon-dribbble"></i></a></li>
 								</ul>
-							<!-- End team member -->
 						</div>
-						<div class="pi-col-xs-6 pi-col-sm-3 pi-padding-bottom-40 pi-text-center">
-							<!-- Team member -->
-								<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px;">
-									<img src="img_external/team/leader-11.jpg" alt="">
-								</div>
-								<h3 class="h4 pi-margin-bottom-5">Mike Ross</h3>	
-								<p class="pi-italic pi-text-base pi-margin-bottom-10">
-									Co-Founder, Art Director
-								</p>
-								<p class="pi-margin-bottom-10">
-									Leveraging our collective experience, we create extraordinary elegant solutions
-								</p>
-								<ul class="pi-social-icons-simple pi-small pi-colored clearFix">
-									<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
-									<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
-									<li><a href="#" class="pi-social-icon-dribbble"><i class="icon-dribbble"></i></a></li>
-								</ul>
-							<!-- End team member -->
-						</div>
-						<div class="pi-col-xs-6 pi-col-sm-3 pi-padding-bottom-40 pi-text-center">
-							<!-- Team member -->
+						<!-- End team member -->
+						<!-- Team member -->
+						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center">
 							<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px;">
 								<img src="img_external/team/leader-11.jpg" alt="">
 							</div>
-							<h3 class="h4 pi-margin-bottom-5">Mike Ross</h3>	
+							<h3 class="h4 pi-margin-bottom-5">Santiago Mojica</h3>	
 							<p class="pi-italic pi-text-base pi-margin-bottom-10">
-								Co-Founder, Art Director
-							</p>
-							<p class="pi-margin-bottom-10">
-								Leveraging our collective experience, we create extraordinary elegant solutions
+								Director de clientes
 							</p>
 							<ul class="pi-social-icons-simple pi-small pi-colored clearFix">
 								<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
 								<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
 								<li><a href="#" class="pi-social-icon-dribbble"><i class="icon-dribbble"></i></a></li>
 							</ul>
-							<!-- End team member -->
 						</div>
-					</div>			
-				</div>
+						<!-- End team member -->
+						<!-- Team member -->
+						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center">
+								<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px;">
+									<img src="img_external/team/leader-11.jpg" alt="">
+								</div>
+								<h3 class="h4 pi-margin-bottom-5">Sergio Repizo</h3>	
+								<p class="pi-italic pi-text-base pi-margin-bottom-10">
+									Gerente de Proyectos
+								</p>
+								<ul class="pi-social-icons-simple pi-small pi-colored clearFix">
+									<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
+									<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
+									<li><a href="#" class="pi-social-icon-dribbble"><i class="icon-dribbble"></i></a></li>
+								</ul>
+						</div>
+						<!-- End team member -->
+						<!-- Team member -->
+						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center">
+							
+								<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px; background: #6b70771">
+									<img src="img_external/team/leader-88.png" alt="">
+								</div>
+								<h3 class="h4 pi-margin-bottom-5">Te necesitamos</h3>	
+								<p class="pi-margin-bottom-10">
+									Aprovechando nuestra experiencia colectiva podemos crear soluciones extraordinarias.
+								</p>
+								<a href="#" class="btn pi-btn-green">
+									Vacantes
+								</a>		
+						</div>
+						<!-- End team member -->
+					</div>
+
+				</div>	
 			</div>
+			
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 		
 			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
