--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -333,7 +333,7 @@
 						<!-- Col 6 -->
 						<div class="pi-col-sm-6 pi-padding-bottom-40">
 							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
-								Similique Sunt
+								Web App HeliconiaTech
 							</h4>
 							<p class="pi-weight-600 pi-text-dark">
 								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
@@ -354,7 +354,7 @@
 						<!-- Col 6 -->
 						<div class="pi-col-sm-6 pi-padding-bottom-40">
 							<div class="pi-img-w pi-no-padding-bottom">
-								<img src="img_external/gallery/apple-devices-2.png" alt="" />
+								<img src="img_external/aplicacion_celular_heliconiatech_de_domotica.png" alt="" />
 							</div>
 						</div>
 						<!-- End col 6 -->
@@ -370,7 +370,7 @@
 				<div class="pi-section">
 					<div class="pi-text-center">
 						<h3 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-border pi-has-tall-border pi-has-short-border">
-							Cupidatat non proident
+							¿Cómo trabajamos en HeliconiaTech?
 						</h3>
 					</div>
 					<p class="lead-16 pi-margin-bottom-40 pi-text-center">
