--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -170,7 +170,8 @@
 				<div class="pi-texture" style="background: rgba(24, 28, 32, 0.8);"></div>
 				<div class="pi-section pi-padding-top-120 pi-padding-bottom-100 pi-text-center">
 					<h2 class="h1 pi-text-shadow pi-padding-top-bottom-70">
-						Excepteur sint occaecat cupidatat <br>sunt in culpa qui officia
+						Aprovechando nuestra experiencia colectiva<br> 
+						creamos soluciones extraordinarias
 					</h2>
 				</div>
 			</div>
