--- a/heliconia/faq.html
+++ b/heliconia/faq.html
@@ -90,7 +90,7 @@
 						<!-- Logo -->
 						<div class="pi-row-block pi-row-block-logo">
 							<a href="index.html">
-								<img src="img/logo-base.png" alt="">
+								<img src="img/logo-base.png" style="padding: 11px 0;" alt="">
 							</a>
 						</div>
 						<!-- End logo -->
