--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -118,7 +118,7 @@
 						<!-- Logo -->
 						<div class="pi-row-block pi-row-block-logo">
 							<a href="index.html">
-								<img src="img/logo-base.png" alt="">
+								<img src="img/logo-base.png" style="padding: 11px 0;" alt="">
 							</a>
 						</div>
 						<!-- End logo -->
@@ -257,7 +257,7 @@
 								<a href="services.html">
 									<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
 										<div class='img'>
-											<img src="img_external/icons/80px/light-bulb-lined-white.png" alt="">
+											<img src="img_external/icons/80px/automatizacion.png" alt="">
 										</div>
 									</div>
 									<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
@@ -279,7 +279,7 @@
 								<a href="services.html">
 									<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
 										<div class='img'>
-											<img src="img_external/icons/80px/monitor-lined-white.png" alt="">
+											<img src="img_external/icons/80px/desarrolloweb.png" alt="">
 										</div>
 									</div>
 									<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
@@ -335,18 +335,15 @@
 							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
 								Web App HeliconiaTech
 							</h4>
-							<p class="pi-weight-600 pi-text-dark">
-								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+							<p class="pi-weight-400 pi-text-dark">
+								Con la solucion de automatización de <span class="pi-text-base">HeliconiaTech</span> controla hasta el último rincón de tu hogar de una manera fácil e intuitiva.
 							</p>
-							<ul class="pi-list-with-icons pi-list-icons-ok pi-margin-bottom-30">
-								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
-								<li>Nam libero tempore, cum soluta nobis est eligendi optio cumque</li>
-								<li>Temporibus autem quibusdam et aut officiis debitis aut rerum</li>
-								<li>Officiis debitis aut rerum necessitatibus saepe quibusdam</li>
-							</ul>
+							<p class="pi-weight-400 pi-text-dark">
+								Nuestra interfaz de usuario, basada en tecnologías web, garantiza interoperabilidad entre diferentes dispositivos como smartphones, tablets y PCs.
+							</p>
 							<p>
-								<a href="http://themeforest.net/item/aura-responsive-multipurpose-template/7786132" class="btn pi-btn pi-btn-base pi-btn-big">
-									Purchase Aura
+								<a href="services.html" class="btn pi-btn pi-btn-base pi-btn-big">
+									Conoce más
 								</a>
 							</p>
 						</div>
