Ingreso de Laura al equipo de HeliconiaTech

--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -276,9 +276,9 @@
 							<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px;">
 								<img src="img_external/team/leader-11.jpg" alt="">
 							</div>
-							<h3 class="h4 pi-margin-bottom-5">Santiago Mojica</h3>	
+							<h3 class="h4 pi-margin-bottom-5">Laura Sarmiento</h3>	
 							<p class="pi-italic pi-text-base pi-margin-bottom-10">
-								Director de clientes
+								Directora creativa
 							</p>
 							<ul class="pi-social-icons-simple pi-small pi-colored clearFix">
 								<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
