Cambios apariencia página

--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -178,7 +178,8 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION - - - - - - - -mision-vision - -->
-			<div id="section-1" class="pi-section-w pi-section-grey">
+			<div id="section-1" class="pi-section-w pi-section-grey pi-border-top">
+				<div class="pi-texture" style="background: url(img/wave.png) repeat;"></div>
 				<div class="pi-section">
 					<div class="pi-row">
 						<div class="pi-col-sm-4">
@@ -304,8 +305,7 @@
 						</div>
 						<!-- End team member -->
 						<!-- Team member -->
-						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center">
-							
+						<div class="pi-col-xs-6 pi-col-sm-3 pi-text-center" style="display: none;">
 								<div class="pi-img-w pi-img-round pi-img-shadow pi-img-center" style="max-width: 220px; background: #6b70771">
 									<img src="img_external/team/leader-88.png" alt="">
 								</div>
@@ -326,8 +326,18 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 		
 			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
-			<div id="section-4" class="pi-section-w pi-section-white">
+			<div id="section-4" class="pi-section-w pi-section-grey">
 				<div class="pi-section">
+					<!-- Row -->
+					<div class="pi-row">
+						<!-- Col 10 -->
+						<div class="pi-col-sm-10 pi-col-sm-offset-1 pi-padding-bottom-60">
+							<h2 class="h4 pi-uppercase pi-weight-700 pi-letter-spacing pi-text-center">
+								Conoce nuestro trabajo
+							</h2>
+						</div>
+						<!-- End col 10 -->
+					</div>
 					<!-- Filter -->
 					<div class="pi-pagenav pi-big pi-text-center" data-isotope-nav="isotope">
 						<ul>
@@ -354,7 +364,7 @@
 									</div>
 								</a>
 							</div>
-							<h3 class="h6 pi-weight-700 pi-uppercase pi-letter-spacing pi-margin-bottom-5"><a href="#" class="pi-link-dark">Client 1</a></h3>
+							<h3 class="h6 pi-weight-700 pi-uppercase pi-letter-spacing pi-margin-bottom-5"><a href="#" class="pi-link-dark">Cliente 1</a></h3>
 							<ul class="pi-meta">
 								<li><i class="icon-tag"></i><a href="#">Automatización</a></li>
 							</ul>
