--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -302,7 +302,7 @@
 								<a href="services.html">
 									<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
 										<div class='img'>
-											<img src="img_external/icons/80px/pencil-pen-lined-white.png" alt="">
+											<img src="img_external/icons/80px/asesoria.png" alt="">
 										</div>
 									</div>
 									<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
@@ -362,8 +362,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION BASE (HOW WE WORK) - - - - - - - - - -->
-			<div id="section-5" class="pi-section-w pi-section-base pi-section-base-gradient">
-				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
+			<div id="section-5" class="pi-section-w pi-section-white">
 				<div class="pi-section">
 					<div class="pi-text-center">
 						<h3 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-border pi-has-tall-border pi-has-short-border">
@@ -381,7 +380,8 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION NEWS - - - - - - - - - -->
-			<div id="section-6" class="pi-section-w pi-shadow-inside-top pi-section-white">
+			<div id="section-6" class="pi-section-w pi-section-grey pi-border-top">
+				<div class="pi-texture" style="background: url(img/wave.png) repeat;"></div>
 				<div class="pi-section pi-no-padding-bottom">
 					<div class="pi-text-center pi-padding-bottom-20">
 						<h3 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-border pi-has-tall-border pi-has-short-border">
@@ -464,13 +464,13 @@
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
-			<!-- - - - - - - - - - SECTION CONTACT US - - - - - - - - - -->
-			<div id="section-7" class="pi-section-w pi-shadow-inside-top pi-section-grey">
+			<!-- - - - - - - - - - SECTION - - - - - - - - - Have a project with us-->
+			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
 				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
-					<p class="lead-30 pi-text-dark">
+					<p class="lead-30">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
-						<a href="contact.html" class="btn pi-btn-base pi-btn-big" style="margin-left: 25px;">
+						<a href="contact.html" class="btn pi-btn-base-2 pi-btn-big" style="margin-left: 25px;">
 							<i class="icon-mail pi-icon-left"></i> Contáctanos
 						</a>
 					</p>
