--- a/heliconia/faq.html
+++ b/heliconia/faq.html
@@ -166,18 +166,23 @@
 
 		<!-- Page -->
 		<div id="page">
-			<!-- Title bar -->
-			<div class="pi-section-w pi-section-base pi-section-base-gradient">
-				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
-				<div class="pi-section" style="padding: 30px 40px 26px;">
-					<div class="pi-row">
-						<div class="pi-col-sm-4 pi-center-text-xs">
-							<h1 class="h2 pi-weight-300 pi-margin-bottom-5">F.A.Q.</h1>
-						</div>
-					</div>
+			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
+			<div class="pi-section-w pi-section-base pi-section-parallax" style="background-image: url(img_external/gallery/contact-banner-short.jpg);">
+				<div class="pi-texture" style="background: rgba(24, 28, 32, 0.8);"></div>
+				<div class="pi-section pi-padding-top-100 pi-padding-bottom-80 pi-text-center">
+					<p>
+						<i class="icon-paper-plane pi-icon-circle pi-icon-base pi-icon-big" style="width: 74px; height: 74px; line-height: 74px;"></i>
+					</p>
+					<h2 class="h1 pi-text-shadow pi-has-border pi-has-tall-border pi-has-base-border pi-has-short-border" style="font-size: 60px;">
+						Pasa y salúdanos <span class="pi-text-base">¡Sin compromiso!</span>
+					</h2>
+					<p class="lead-18 pi-weight-300 pi-margin-bottom-30 pi-p-half">
+						Estamos interesados en tus preguntas, ideas o comentarios 
+						Déjanos un mensaje y te responderemos en el menor tiempo posible
+					</p>
 				</div>
 			</div>
-			<!-- End title bar -->
+			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
 			<div class="pi-section-w pi-section-white piAccordion">
@@ -185,6 +190,9 @@
 					<!-- Row -->
 					<div class="pi-row">
 						<!-- Col 6 -->
+						<h2 class="h4 pi-has-bg pi-weight-700 pi-uppercase pi-letter-spacing pi-margin-bottom-30">
+							F.A.Q.
+						</h2>
 						<div class="pi-col-sm-6">
 							<!-- Accordion -->
 							<div class="pi-accordion pi-behavior-toggle">
@@ -410,13 +418,13 @@
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
-			<!-- - - - - - - - - - SECTION CONTACT US - - - - - - - - - -->
-			<div class="pi-section-w pi-shadow-inside-top pi-section-grey">
+			<!-- - - - - - - - - - SECTION - - - - - - - - - Have a project with us-->
+			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
 				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
-					<p class="lead-30 pi-text-dark">
+					<p class="lead-30">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
-						<a href="contact.html" class="btn pi-btn-base pi-btn-big" style="margin-left: 25px;">
+						<a href="contact.html" class="btn pi-btn-base-2 pi-btn-big" style="margin-left: 25px;">
 							<i class="icon-mail pi-icon-left"></i> Contáctanos
 						</a>
 					</p>
