--- a/heliconia/services.html
+++ b/heliconia/services.html
@@ -65,10 +65,12 @@
 			border-radius: 50%;
 			box-shadow: inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.3);
 			transform: scale(0);
+			-webkit-transform: scale(0);
 		}
 
 		.ht-service-icon .img6:hover:before {
 			transform: scale(1);
+			-webkit-transform: scale(1);
 			transition: all 0.35s ease-in-out;
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
@@ -502,31 +504,9 @@
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
-			<!-- - - - - - - - - - SECTION phrase divider- - - - - - - - - -->
-			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
-				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
-				<div class="pi-section pi-padding-top-50 pi-padding-bottom-30">
-					<!-- Row -->
-					<div class="pi-row">
-						<!-- Col 9 -->
-						<div class="pi-col-sm-12 pi-center-text-xs">
-							<h3 class="pi-weight-300">
-								La aplicación para tu negocio es a la medida
-							</h3>
-							<p class="lead-16">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							</p>
-						</div>
-						<!-- End col 9 -->			
-					</div>
-					<!-- End row -->
-				</div>
-			</div>
-			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
-
 			<!-- - - - - - - - - - SECTION servicio 2- - - - - - - - - -->
 			<div id="section-2" class="pi-section-w pi-section-white pi-border-top">
-				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
+				<div class="pi-texture"></div>
 				<div class="pi-section pi-padding-bottom-20">
 					<div class="pi-text-center pi-padding-bottom-40">	
 						<h6 class="pi-uppercase pi-letter-spacing-3 pi-text-base pi-margin-bottom-15">
@@ -765,7 +745,7 @@
 						<!-- Col 9 -->
 						<div class="pi-col-sm-12 pi-center-text-xs">
 							<h3 class="pi-weight-300">
-								Cool segue between web and consultant
+								La aplicación para tu negocio es a la medida
 							</h3>
 							<p class="lead-16">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -786,7 +766,7 @@
 							Nuestro servicio de
 						</h6>
 						<h2 class="h1 pi-weight-700 pi-uppercase pi-has-border pi-has-tall-border pi-has-short-border">
-							Consultoria en tegnologia
+							Consultoria en tecnología
 						</h2>
 					</div>
 					<!-- Row -->
