No slogan high tech y padding titulo

--- a/heliconia/faq.html
+++ b/heliconia/faq.html
@@ -167,18 +167,17 @@
 		<!-- Page -->
 		<div id="page">
 			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
-			<div class="pi-section-w pi-section-base pi-section-parallax" style="background-image: url(img_external/gallery/contact-banner-short.jpg);">
+			<div class="pi-section-w pi-section-base pi-section-parallax" style="background-image: url(img_external/gallery/direction_sign.jpg);">
 				<div class="pi-texture" style="background: rgba(24, 28, 32, 0.8);"></div>
 				<div class="pi-section pi-padding-top-100 pi-padding-bottom-80 pi-text-center">
 					<p>
-						<i class="icon-paper-plane pi-icon-circle pi-icon-base pi-icon-big" style="width: 74px; height: 74px; line-height: 74px;"></i>
+						<i class="icon-help pi-icon-circle pi-icon-base pi-icon-big" style="width: 74px; height: 74px; line-height: 74px;"></i>
 					</p>
 					<h2 class="h1 pi-text-shadow pi-has-border pi-has-tall-border pi-has-base-border pi-has-short-border" style="font-size: 60px;">
-						Pasa y salúdanos <span class="pi-text-base">¡Sin compromiso!</span>
+						¿Tienes una pregunta?
 					</h2>
 					<p class="lead-18 pi-weight-300 pi-margin-bottom-30 pi-p-half">
-						Estamos interesados en tus preguntas, ideas o comentarios 
-						Déjanos un mensaje y te responderemos en el menor tiempo posible
+						Acá encontraras respuestas a algunas dudas que puedas tener
 					</p>
 				</div>
 			</div>
@@ -423,7 +422,7 @@
 				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
 					<p class="lead-30">
-						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
+						¿Tienes otras preguntas? <span class="pi-weight-400">Estamos para para ayudarte</span>
 						<a href="contact.html" class="btn pi-btn-base-2 pi-btn-big" style="margin-left: 25px;">
 							<i class="icon-mail pi-icon-left"></i> Contáctanos
 						</a>
