--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -201,42 +201,21 @@
 					<h2 class="h1 pi-text-shadow">
 						Bienvenido a <span class="pi-text-base">HeliconiaTech</span>
 					</h2>					
-					<p class="lead-18 pi-weight-300 pi-margin-bottom-30">
-						<span class="pi-text-base">HeliconiaTech</span> es una empresa de ingeniería que ejecuta tus ideas <br>y planes usando tecnologías web y sistemas embebidos. 
+					<p class="lead-18 pi-weight-300 pi-margin-bottom-30" style="padding: 0 19%;">
+						<span class="pi-text-base">HeliconiaTech</span> es una empresa de ingeniería que ejecuta tus ideas y planes usando el estado del arte en tecnologías web y sistemas embebidos. 
 					</p>
 					<p>
 						<a href="contact.html" class="btn pi-btn-base pi-btn-no-border pi-shadow pi-btn-big">
 							Contáctanos
 						</a>
 						<span class="pi-clearfix pi-visible-sm"></span>
+				<!-- 						
 						<span class="pi-or">o</span>
 						<span class="pi-clearfix pi-visible-sm"></span>
 						<a href="about.html" class="btn pi-btn-contur-3 pi-btn-big">
 							Conócenos
-						</a>
+						</a> -->
 					</p>
-				</div>
-			</div>
-			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
-
-			<!-- - - - - - - - - - SECTION SLOGAN HIGH TECH- - - - - - - - - -->
-			<div id="section-2" class="pi-section-w pi-shadow-inside-top pi-section-dark">
-				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
-				<div class="pi-section pi-padding-top-50 pi-padding-bottom-30">
-					<!-- Row -->
-					<div class="pi-row">
-						<!-- Col 9 -->
-						<div class="pi-col-sm-12 pi-center-text-xs">
-							<h3 class="pi-weight-300">
-								Conoce el estilo de vida HeliconiaTech
-							</h3>
-							<p class="lead-16">
-								Las soluciones de supervisión y automatización de HeliconiaTech hacen uso de tecnologías de punta. Con una instalación rápida podrás contar con ambientes inteligentes y un cómodo estilo de vida. No esperes más, permítenos crear  la  solución  perfecta para ti.
-							</p>
-						</div>
-						<!-- End col 9 -->			
-					</div>
-					<!-- End row -->
 				</div>
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
