--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -201,8 +201,8 @@
 					<h2 class="h1 pi-text-shadow">
 						Bienvenido a <span class="pi-text-base">HeliconiaTech</span>
 					</h2>					
-					<p class="lead-18 pi-weight-300 pi-margin-bottom-30" style="padding: 0 19%;">
-						<span class="pi-text-base">HeliconiaTech</span> es una empresa de ingeniería que ejecuta tus ideas y planes usando el estado del arte en tecnologías web y sistemas embebidos. 
+					<p class="lead-18 pi-weight-300 pi-margin-bottom-30" style="padding: 0 21%;">
+						<span class="pi-text-base">HeliconiaTech</span>, una empresa de ingeniería que hace realidad tus ideas y les da vida usando tecnología de punta 
 					</p>
 					<p>
 						<a href="contact.html" class="btn pi-btn-base pi-btn-no-border pi-shadow pi-btn-big">
@@ -219,6 +219,17 @@
 				</div>
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
+			<div class="pi-section-w pi-section-dark">
+				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
+				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40">
+					<p class="lead-20 pi-text-center">
+						Ajustándonos a tus necesidades diseñamos una solución a la medida de tu proyecto y la ejecutamos teniendo siempre en mente tu plena satisfacción.
+					</p>
+<!-- 					<div class="lead-30 pi-text-center pi-testimonial-content pi-testimonial-content-quotes" style="font-style: italic">
+						GIVE LIFE AND VOICE TO YOUR WORLD
+					</div> -->
+				</div>
+			</div>
 
 			<!-- - - - - - - - - - SECTION SERVICES- - - - - - - - - -->
 			<div id="section-3" class="pi-section-w pi-section-white">
